config kafka to send email